--- a/examples/simulation3-empty/CMakeLists.txt
+++ b/examples/simulation3-empty/CMakeLists.txt
@@ -4,5 +4,5 @@ target_link_libraries(simulation3-empty melissa_api)
 INSTALL(TARGETS simulation3-empty RUNTIME DESTINATION bin)
 
 add_test(NAME simulation3-empty
-    COMMAND ${in_env} python ./script.py
+    COMMAND ${in_env} python3 ./script.py
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
