--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,13 @@ if(INSTALL_FTI)
     set(FTI_LIBRARY "${FTI_PATH}/lib/libfti.so")
     set(FTI_INCLUDE_DIR "${FTI_PATH}/include")
     set(WITH_FTI TRUE)
-elseif(WITH_FTI OR WITH_FTI_THREADS)
+endif()
+if(WITH_FTI OR WITH_FTI_THREADS)
+    if (WITH_FTI_THREADS)
+        find_package(Threads REQUIRED)
+        link_libraries(${CMAKE_THREAD_LIBS_INIT})
+        message("here")
+    endif()
     if(EXISTS "${FTI_PATH}/lib/libfti.so")
         set(FTI_LIBRARY "${FTI_PATH}/lib/libfti.so")
     else()
