Install config.fti

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,9 @@ if (WITH_FTI)
         link_libraries(${CMAKE_THREAD_LIBS_INIT})
     endif()
 
+install(FILES config.fti
+        DESTINATION share/melissa-da)
+
 endif()
 include_directories(SYSTEM ${MPI_INCLUDE_PATH})
 add_definitions(${MPI_C_COMPILE_FLAGS})
