--- a/launcher/CMakeLists.txt
+++ b/launcher/CMakeLists.txt
@@ -1,3 +1,6 @@
+install(FILES utils.py
+        DESTINATION share/melissa-da/python)
+
 install(FILES melissa_da_study.py
         DESTINATION share/melissa-da/python)
 
