Don't restart server if compiled without FTI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,4 +41,4 @@ test:
   dependencies:
     - build
 
-
+      # Add another testcase where FTI is activated and where some FTI related stuff is tested!
