--- a/melissa-da_set_env.sh.in
+++ b/melissa-da_set_env.sh.in
@@ -10,3 +10,6 @@ export MELISSA_DA_PATH=@CMAKE_INSTALL_PREFIX@
 export MPIEXEC=@MPIEXEC_EXECUTABLE@
 
 export PYTHONPATH=@CMAKE_INSTALL_PREFIX@/share/melissa-da/python$PYTHONPATH
+
+
+export MELISSA_DA_WITH_FTI=@WITH_FTI@
