Add another testcase for the crashing server

--- a/examples/simulation2-pdaf/CMakeLists.txt
+++ b/examples/simulation2-pdaf/CMakeLists.txt
@@ -24,4 +24,4 @@ add_test(NAME simulation2-pdaf
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 python_test("test-example-simulation2")
-python_test("test-crashing-server")
+python_test("test-crashing-server2")
