Fix wrong test command

--- a/examples/simulation2-pdaf/CMakeLists.txt
+++ b/examples/simulation2-pdaf/CMakeLists.txt
@@ -20,7 +20,7 @@ target_link_libraries(simulation2-pdaf melissa_api)
 INSTALL(TARGETS simulation2-pdaf RUNTIME DESTINATION bin)
 #${CMAKE_CURRENT_SOURCE_DIR}/test.sh
 add_test(NAME simulation2-pdaf
-    COMMAND ${in_env} python3 ./tests.py
+    COMMAND ${in_env} python3 ./script.py
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 python_test("test-example-simulation2")
