Improve python configuration

--- a/launcher/CMakeLists.txt
+++ b/launcher/CMakeLists.txt
@@ -1,6 +1,19 @@
-install(FILES utils.py
-        DESTINATION share/melissa-da/python)
+file(GLOB
+    ALL_LAUNCHER
+     RELATIVE
+     ${CMAKE_CURRENT_SOURCE_DIR}
+     *.py
+     )
 
-install(FILES melissa_da_study.py
-        DESTINATION share/melissa-da/python)
+file(GLOB
+    ALL_CLUSTER
+     RELATIVE
+     ${CMAKE_CURRENT_SOURCE_DIR}
+     cluster/*.py
+     )
 
+ install(FILES ${ALL_LAUNCHER}
+     DESTINATION share/melissa-da/python)
+
+ install(FILES ${ALL_CLUSTER}
+     DESTINATION share/melissa-da/python/cluster)
