--- a/common/melissa-da_config.h.in
+++ b/common/melissa-da_config.h.in
@@ -1,4 +1,5 @@
 #cmakedefine REPORT_TIMING
 #cmakedefine REPORT_TIMING_ALL_RANKS
 #cmakedefine REPORT_MEMORY
+#cmakedefine REPORT_WORKLOAD
 #cmakedefine RUNNERS_MAY_CRASH
