git: use relative URLs as required by GitLab CI
See https://docs.gitlab.com/ee/ci/git_submodules.html

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@gitlab.inria.fr:sfriedem/parflow-melissa-da.git
 [submodule "melissa"]
 	path = melissa
-	url = git@gitlab.inria.fr:melissa/melissa.git
+	url = ../melissa.git
