Update used melissa version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 project(Melissa LANGUAGES CXX Fortran C)
 cmake_minimum_required(VERSION 3.10.2)
+
+list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/melissa/cmake/Modules)
+
 enable_testing()
 
 # For intel compilers necessary:
@@ -60,8 +63,7 @@ endif()
 #       to depend on the latest melissa version and its ZMQ version...
 #list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/melissa/cmake/Modules)
 #include(BuildZeroMQ)
-#find_package(ZeroMQ REQUIRED)
-include(melissa/melissa-zmq.cmake)
+find_package(ZeroMQ REQUIRED)
 include_directories(${ZeroMQ_INCLUDE_DIR})
 link_libraries(${ZeroMQ_LIBRARY})
 
