--- a/melissa-da_set_env.sh.in
+++ b/melissa-da_set_env.sh.in
@@ -7,7 +7,7 @@ export LD_LIBRARY_PATH=@FTI_PATH@/lib:$LD_LIBRARY_PATH
 export PDAF_PATH=@PDAF_PATH@
 export DATASET_PATH=@PDAF_PATH@/tutorial/inputs_online/
 export MELISSA_DA_PATH=@CMAKE_INSTALL_PREFIX@
-export MPIEXEC=@MPIEXEC_EXECUTABLE@
+export MPIEXEC=@MPIEXEC@
 
 export PYTHONPATH=@CMAKE_INSTALL_PREFIX@/share/melissa-da/python:$PYTHONPATH
 
