--- a/melissa-da_set_env.sh.in
+++ b/melissa-da_set_env.sh.in
@@ -7,6 +7,7 @@ export LD_LIBRARY_PATH=@FTI_PATH@/lib:$LD_LIBRARY_PATH
 export PDAF_PATH=@PDAF_PATH@
 export DATASET_PATH=@PDAF_PATH@/tutorial/inputs_online/
 export MELISSA_DA_PATH=@CMAKE_INSTALL_PREFIX@
+export MELISSA_DA_SOURCE_PATH=@CMAKE_SOURCE_DIR@
 export MPIEXEC=@MPIEXEC@
 
 export PYTHONPATH=@CMAKE_INSTALL_PREFIX@/share/melissa-da/python:$PYTHONPATH
