--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -51,4 +51,5 @@ function(add_python_test test_name test_script)
     #)
 endfunction()
 
-add_python_test("test-crashing-runner2" "${CMAKE_CURRENT_SOURCE_DIR}/test-crashing-runner.py")
+add_python_test("test-crashing-runner" "${CMAKE_CURRENT_SOURCE_DIR}/test-crashing-runner.py")
+add_python_test("test-crashing-server1" "${CMAKE_CURRENT_SOURCE_DIR}/test-crashing-server.py")
